--- a/index.html
+++ b/index.html
@@ -5,15 +5,13 @@
     <title>Sabores de la Patagonia</title>
     <link rel="stylesheet" href="estilos.css">
   </head>
-  <body background="https://1.bp.blogspot.com/-RFHkdTgH0Ls/YMEk6ZOcgcI/AAAAAAAAiSk/cAYO5TaUzPM4hLmqtTL0lQlG0c1aKU2WACLcBGAsYHQ/s2535/V1-MINIMAL_MOUNTAIN-HD.png" bgcolor="218EA9">
   <body>
-   <center>
     <img src="https://www.kibrispdr.org/data/769/patagonia-logo-png-4.png" width="300" height="200" alt="Patagonia">
-    <h1>Cordero a la Sartén</h1>
+    <h1 class="tit1">Cordero a la Sartén</h1>
     <p>(Para cuatro personas)</p>
     <img src="https://www.clarin.com/img/2021/12/16/cordero-a-la-parrilla-un___0V90iDpEJ_2000x1500__1.jpg" width="600" height="450" alt="Cordero a la Sartén">
     <h2>Ingredientes</h2>
-   </center>
+    <div class="centrar-listas">
     <ul>
         <li>Corte a utilizar: Paleta o pierna de cordero, también pueden ser chuletas (costillas).</li>
         <li>1 kilo de carne cortada en daditos o cubitos, o 1 kilo y medio de chuletas cortadas finas.</li>
@@ -29,9 +27,9 @@
         <li>1 vaso de vino blanco </li>
         <li>sal y condimentos a gusto </li>
     </ul>
-    <center>
+  </div>
     <h2>Preparación</h2>
-</center>
+    <div class="centrar-listas">
     <ol>
       <li>Colocar en una sartén el aceite, las cebollas, los cubos de carne (o las chuletas) previamente salados y condimentados.</li>
       <li>Dorar a fuego lento. Luego agregar el perejil, la menta, el vaso de vino y cocinar sobre fuego moderado hasta que se reduzca el líquido y se espese la salsa. </li>
@@ -39,12 +37,11 @@
       <li>Con las papas hacer un puré al que se le agregará el queso rallado y luego la acelga picada en trocitos.</li>
       <li>Para finalizar condimentar con una pizca de nuez moscada. Servir esta preparación como acompañamiento.</li>
     </ol>
-<center>
+  </div>
     <h2>Vídeo de paso por paso:</h2>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/gXgxJqdVIa0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
    <br>
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d39629.174986947844!2d-69.30685433326825!3d-51.626443415992455!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xbdb6f952b21c66e5%3A0xab7c41f247647102!2sR%C3%ADo%20Gallegos%2C%20Santa%20Cruz!5e0!3m2!1ses-419!2sar!4v1667179539559!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
   </body>
-</center>
 </body>
 </html>
