--- a/index.html
+++ b/index.html
@@ -1,17 +1,22 @@
 <!DOCTYPE html>
 <html lang="es-ES">
   <head>
+    <link rel="shortcut icon" href="Imagenes/icons8-alpes-100.png">
     <meta charset="utf-8">
     <title>Sabores de la Patagonia</title>
     <link rel="stylesheet" href="estilos.css">
   </head>
   <body>
-    <img src="https://www.kibrispdr.org/data/769/patagonia-logo-png-4.png" width="300" height="200" alt="Patagonia">
-    <h1 class="tit1">Cordero a la Sartén</h1>
+    <header>
+    <img src="Imagenes/montanas.png" width="1300" height="300" alt="Patagonia">
+</header>
+ <nav>
+  <h1 class="tit1">Cordero a la Sartén</h1>
     <p>(Para cuatro personas)</p>
-    <img src="https://www.clarin.com/img/2021/12/16/cordero-a-la-parrilla-un___0V90iDpEJ_2000x1500__1.jpg" width="600" height="450" alt="Cordero a la Sartén">
-    <h2>Ingredientes</h2>
-    <div class="centrar-listas">
+  </nav> 
+   <section>
+ <h2>Ingredientes</h2>
+    <div class="centrar-listasitems">
     <ul>
         <li>Corte a utilizar: Paleta o pierna de cordero, también pueden ser chuletas (costillas).</li>
         <li>1 kilo de carne cortada en daditos o cubitos, o 1 kilo y medio de chuletas cortadas finas.</li>
@@ -29,7 +34,8 @@
     </ul>
   </div>
     <h2>Preparación</h2>
-    <div class="centrar-listas">
+    <div class="centrar-listasnum">
+      <img class="cordero"src="Imagenes/cordero.png" alt="Cordero a la Sartén">
     <ol>
       <li>Colocar en una sartén el aceite, las cebollas, los cubos de carne (o las chuletas) previamente salados y condimentados.</li>
       <li>Dorar a fuego lento. Luego agregar el perejil, la menta, el vaso de vino y cocinar sobre fuego moderado hasta que se reduzca el líquido y se espese la salsa. </li>
@@ -38,10 +44,29 @@
       <li>Para finalizar condimentar con una pizca de nuez moscada. Servir esta preparación como acompañamiento.</li>
     </ol>
   </div>
+</section>
+<section>
     <h2>Vídeo de paso por paso:</h2>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/gXgxJqdVIa0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-   <br>
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d39629.174986947844!2d-69.30685433326825!3d-51.626443415992455!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xbdb6f952b21c66e5%3A0xab7c41f247647102!2sR%C3%ADo%20Gallegos%2C%20Santa%20Cruz!5e0!3m2!1ses-419!2sar!4v1667179539559!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-  </body>
+  </section>
+   <section>
+      <h1 class="tit2">Más Recetas:</h1>
+    <a class="enlaces" href="https://www.patagonia-argentina.com/cuarto-de-ciervo-al-horno/" target="_blank"> Cuarto de Ciervo al horno</a>
+    <a class="enlaces" href="https://www.patagonia-argentina.com/tarta-patagonica/" target="_blank">Tarta Patagónica</a>
+    <a class="enlaces" href="https://www.patagonia-argentina.com/hongos-en-escabeche/" target="_blank"> Hongos en Escabeche</a>
+    <a class="enlaces"  href="https://www.patagonia-argentina.com/pate-de-salmon/" target="_blank"> Paté de Salmón</a>
+ </section>
+    <section>
+      <br>
+   <img src="imagenes/riogallegos.png" width="200" height="200" alt="RioGallegos">
+   <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d39629.174986947844!2d-69.30685433326825!3d-51.626443415992455!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xbdb6f952b21c66e5%3A0xab7c41f247647102!2sR%C3%ADo%20Gallegos%2C%20Santa%20Cruz!5e0!3m2!1ses-419!2sar!4v1667179539559!5m2!1ses-419!2sar" width="300" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+  </section>
+ 
+  <footer>
+    <a href="https://www.whatsapp.com/?lang=es" target="_blank"><img class="wspicono" src="Imagenes/icons8-whatsapp-100.png" width="60" height="60" alt="Whatsapp"></a>
+  <a href="https://www.instagram.com" target="_blank"><img class="instagramicono" src="Imagenes/icons8-instagram-100.png" width="50" height="50" alt="Instagram"></a>
+  <a href="https://www.facebook.com" target="_blank"><img class="fbicono" src="Imagenes/icons8-facebook-nuevo-100.png" width="50" height="50" alt="Facebook"></a>
+  <a href="https://www.tiktok.com/es/" target="_blank"><img class="tiktokicono" src="Imagenes/icons8-tik-tok-100.png" width="50" height="50" alt="Tik Tok"></a>
+</footer>
 </body>
 </html>
