--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
  </section>
     <section>
       <br>
-   <img src="imagenes/riogallegos.png" width="200" height="200" alt="RioGallegos">
+   <img src="Imagenes/riogallegos.png" width="200" height="200" alt="RioGallegos">
    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d39629.174986947844!2d-69.30685433326825!3d-51.626443415992455!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xbdb6f952b21c66e5%3A0xab7c41f247647102!2sR%C3%ADo%20Gallegos%2C%20Santa%20Cruz!5e0!3m2!1ses-419!2sar!4v1667179539559!5m2!1ses-419!2sar" width="300" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
   </section>
  
