--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="utf-8">
     <title>Sabores de la Patagonia</title>
     <link rel="stylesheet" href="estilos.css">
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=IM+Fell+DW+Pica:ital@1&family=Sono:wght@500&display=swap');
+      </style>
   </head>
   <body>
     <header>
@@ -16,11 +19,18 @@
     <a href="https://www.tiktok.com/es/" target="_blank"><img class="tiktokicono" src="Imagenes/icons8-tik-tok-100.png" width="50" height="50" alt="Tik Tok"></a>
     </div>
   </header>
- <nav>
+  <nav>
+    <a href="index.html">Inicio</a>
+    <a href="contactos.html">Contacto</a>
+    <a href="https://www.patagonia-argentina.com/cocina-de-patagonia/" target="_blank"> Recetas </a>
+    <a href="https://www.patagonia-argentina.com/" target="_blank"> Patagonia </a>
+    <a href="https://recetasargentinas.net" target="_blank"> Argentina </a>
+    <div class="animation start-home"></div>
+   </nav>
+
+  <section>
   <h1 class="tit1">Cordero a la Sartén</h1>
     <p>(Para cuatro personas)</p>
-  </nav> 
-   <section>
  <h2>Ingredientes</h2>
     <div class="centrar-listasitems">
     <ul>
@@ -53,25 +63,25 @@
 </section>
 <section>
     <h2>Vídeo de paso por paso:</h2>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/gXgxJqdVIa0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe class="video" src="https://www.youtube.com/embed/gXgxJqdVIa0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </section>
    <section>
-      <h1 class="tit2">Más Recetas:</h1>
-    <a class="enlaces" href="https://www.patagonia-argentina.com/cuarto-de-ciervo-al-horno/" target="_blank"> Cuarto de Ciervo al horno</a>
-    <a class="enlaces" href="https://www.patagonia-argentina.com/tarta-patagonica/" target="_blank">Tarta Patagónica</a>
-    <a class="enlaces" href="https://www.patagonia-argentina.com/hongos-en-escabeche/" target="_blank"> Hongos en Escabeche</a>
-    <a class="enlaces"  href="https://www.patagonia-argentina.com/pate-de-salmon/" target="_blank"> Paté de Salmón</a>
+      <h1 class="tit2">Recetas Recomendadas:</h1>
+    <a class="enlaces1" href="https://www.patagonia-argentina.com/cuarto-de-ciervo-al-horno/" target="_blank"> Cuarto de Ciervo al horno</a>
+    <a class="enlaces1" href="https://www.patagonia-argentina.com/tarta-patagonica/" target="_blank">Tarta Patagónica</a>
+    <a class="enlaces1" href="https://www.patagonia-argentina.com/hongos-en-escabeche/" target="_blank"> Hongos en Escabeche</a>
+    <a class="enlaces1"  href="https://www.patagonia-argentina.com/pate-de-salmon/" target="_blank"> Paté de Salmón</a>
  </section>
     <section>
       <br>
       <br>  
-   <img src="Imagenes/riogallegos.png" width="200" height="200" alt="RioGallegos">
-   <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d39629.174986947844!2d-69.30685433326825!3d-51.626443415992455!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xbdb6f952b21c66e5%3A0xab7c41f247647102!2sR%C3%ADo%20Gallegos%2C%20Santa%20Cruz!5e0!3m2!1ses-419!2sar!4v1667179539559!5m2!1ses-419!2sar" width="300" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+   <img class="visita" src="Imagenes/riogallegos.png" alt="RioGallegos">
+   <iframe class="mapa" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d39629.174986947844!2d-69.30685433326825!3d-51.626443415992455!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xbdb6f952b21c66e5%3A0xab7c41f247647102!2sR%C3%ADo%20Gallegos%2C%20Santa%20Cruz!5e0!3m2!1ses-419!2sar!4v1667179539559!5m2!1ses-419!2sar" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
   </section>
  
   <footer>
     <a href="https://www.whatsapp.com/?lang=es" target="_blank"><img class="wspicono" src="Imagenes/icons8-whatsapp-100.png" width="60" height="60" alt="Whatsapp"></a>
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d26762.22532217175!2d-60.621840750000004!3d-33.0228013!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95b7a85cc7f437c3%3A0x431106d9b412969c!2sVilla%20Gdor.%20Galvez%2C%20Santa%20Fe!5e0!3m2!1ses-419!2sar!4v1667673376470!5m2!1ses-419!2sar" width="200" height="100" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    <iframe class="mapa2" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d26762.22532217175!2d-60.621840750000004!3d-33.0228013!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95b7a85cc7f437c3%3A0x431106d9b412969c!2sVilla%20Gdor.%20Galvez%2C%20Santa%20Fe!5e0!3m2!1ses-419!2sar!4v1667673376470!5m2!1ses-419!2sar"  style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     <div class="redesfooter">
     <a href="https://www.instagram.com" target="_blank"><img class="instagramicono" src="Imagenes/icons8-instagram-100.png" width="50" height="50" alt="Instagram"></a>
   <a href="https://www.facebook.com" target="_blank"><img class="fbicono" src="Imagenes/icons8-facebook-nuevo-100.png" width="50" height="50" alt="Facebook"></a>
@@ -81,7 +91,7 @@
   
   <img  class= "autor1" src="Imagenes/icons8-koya-bt21-100.png" width="35" height="35" alt="Autor"><h3>Stefanía Giacomini</h3>
   <img  class= "mail" src="Imagenes/icons8-nuevo-post-100.png" width="35" height="35" alt="Mail"><h3>giacoministefania19@gmail.com</h3>
-  <img  class= "ubic" src="Imagenes/icons8-ubicación-del-usuario-100.png" width="35" height="35" alt="Ubicación"><h3>Villa Gobernador Gálvez, Santa Fe, Argentina</h3>
+  <img  class= "ubic" src="Imagenes/icons8-ubicación-del-usuario-100.png" width="35" height="35" alt="Ubicación"><h3>Villa Gdor. Gálvez, Santa Fe, Argentina</h3>
 </div>
 </footer>
 </body>
