--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="shortcut icon" href="Imagenes/icons8-alpes-100.png">
     <meta charset="utf-8">
     <title>Sabores de la Patagonia</title>
-    <link rel="stylesheet" href="estilos.css">
+    <link rel="stylesheet" href="css/estilos.css">
     <script type="text/javascript" src="https://platform-api.sharethis.com/js/sharethis.js#property=637bd47f091907001989eba0&product=inline-reaction-buttons&source=platform" async="async"></script>
     <style>
       @import url('https://fonts.googleapis.com/css2?family=IM+Fell+DW+Pica:ital@1&family=Sono:wght@500&display=swap');
