--- a/contactos.html
+++ b/contactos.html
@@ -4,7 +4,7 @@
     <link rel="shortcut icon" href="Imagenes/icons8-alpes-100.png">
     <meta charset="utf-8">
     <title>Sabores de la Patagonia</title>
-    <link rel="stylesheet" href="estilos.css">
+    <link rel="stylesheet" href="css/estilos.css">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=IM+Fell+DW+Pica:ital@1&family=Sono:wght@500&display=swap');
         </style>
